[gd_scene load_steps=38 format=3 uid="uid://i6usxc4ww8te"]

[ext_resource type="PackedScene" path="res://MGF Scene/Setup/ButtonClose.tscn" id="1"]
[ext_resource type="Script" path="res://MGF Scene/Main Game/PlayerInfo.gd" id="2"]
[ext_resource type="Script" path="res://MGF Scene/Main Game/MatchDetail.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bq0ponx4ifp0u" path="res://Assets2D/UI/iconFormation.png" id="4"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnOp.tres" id="5"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UIMatchDetails.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://bbki8texicggy" path="res://Assets2D/UI/IconHome.png" id="7"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIN.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://danpda1vxrbca" path="res://Assets2D/TeamLogo/High/CB.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b6x20hd07t2nr" path="res://Assets2D/UI/IconInfo.png" id="10"]
[ext_resource type="Texture2D" uid="uid://c31n8qoq1b5qu" path="res://Assets2D/UI/iconMenu.png" id="11"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIP.tres" id="12"]
[ext_resource type="PackedScene" uid="uid://bnqut1e5dhun2" path="res://MGF Scene/Season/PlayerStats.tscn" id="13"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UIBig.tres" id="14"]
[ext_resource type="PackedScene" path="res://MGF Scene/Season/MatchReady.tscn" id="15"]
[ext_resource type="PackedScene" path="res://MGF Scene/Main Game/PlayerGoals.tscn" id="16"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCN.tres" id="17"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCP.tres" id="18"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="19"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGN.tres" id="20"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGO.tres" id="21"]
[ext_resource type="Theme" uid="uid://doboha45rdjnj" path="res://Assets2D/Fonts/ThemeInfo.tres" id="22"]
[ext_resource type="Texture2D" uid="uid://n3gxevec6nba" path="res://Assets2D/UI/iconExit.png" id="23"]
[ext_resource type="Script" path="res://addons/mgf_tools/UIHAutoScale.gd" id="24"]
[ext_resource type="Texture2D" uid="uid://67pwl8eapunt" path="res://Assets2D/UI/iconSettings.png" id="25"]
[ext_resource type="Script" path="res://addons/mgf_tools/TabsBtn.gd" id="26"]
[ext_resource type="Texture2D" uid="uid://bdvoijd3qisg" path="res://Assets2D/UI/iconController.png" id="27"]
[ext_resource type="Texture2D" uid="uid://dfoo6atk4skf1" path="res://Assets2D/UI/IconTheme.png" id="28"]
[ext_resource type="Texture2D" uid="uid://du1mwdbsqwtat" path="res://Assets2D/UI/IconDisplay.png" id="29"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedN.tres" id="30"]
[ext_resource type="Texture2D" uid="uid://b6m0p61qkdgy0" path="res://Assets2D/UI/iconTest.png" id="31"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedP.tres" id="32"]
[ext_resource type="Script" path="res://addons/mgf_tools/UIVAutoScale.gd" id="33"]
[ext_resource type="Script" path="res://MGF Scene/Main Game/MatchSetting.gd" id="34"]

[sub_resource type="ImageTexture" id="1"]

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[node name="MatchDetail" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("20")

[node name="TabBar" type="Control" parent="."]
process_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Stats" type="Control" parent="TabBar"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MatchInfo" type="Panel" parent="TabBar/Stats"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -628.0
offset_right = 192.0
offset_bottom = -4.0
theme_override_styles/panel = ExtResource("5")

[node name="TeamName" type="Control" parent="TabBar/Stats/MatchInfo"]
custom_minimum_size = Vector2(30, 50)
anchors_preset = 0
anchor_right = 1.0
offset_bottom = 64.0

[node name="A" type="Label" parent="TabBar/Stats/MatchInfo/TeamName"]
custom_minimum_size = Vector2(30, 50)
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="B" type="Label" parent="TabBar/Stats/MatchInfo/TeamName"]
custom_minimum_size = Vector2(30, 50)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="PlayerInfo" type="Panel" parent="TabBar/Stats/MatchInfo"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -896.0
offset_top = -438.0
offset_right = 896.0
offset_bottom = 322.0
theme_override_styles/panel = ExtResource("21")
script = ExtResource("2")

[node name="PlayerA" type="ScrollContainer" parent="TabBar/Stats/MatchInfo/PlayerInfo"]
layout_mode = 0
offset_left = 8.0
offset_top = 142.0
offset_right = 688.0
offset_bottom = 726.0

[node name="Player" type="VBoxContainer" parent="TabBar/Stats/MatchInfo/PlayerInfo/PlayerA"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = -7

[node name="Player" parent="TabBar/Stats/MatchInfo/PlayerInfo/PlayerA/Player" instance=ExtResource("13")]
layout_mode = 2

[node name="PlayerB" type="ScrollContainer" parent="TabBar/Stats/MatchInfo/PlayerInfo"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -696.0
offset_top = 150.0
offset_right = -16.0
offset_bottom = 726.0

[node name="Player" type="VBoxContainer" parent="TabBar/Stats/MatchInfo/PlayerInfo/PlayerB"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = -7
alignment = 2

[node name="Player" parent="TabBar/Stats/MatchInfo/PlayerInfo/PlayerB/Player" instance=ExtResource("13")]
layout_mode = 2

[node name="mainLabel" type="HBoxContainer" parent="TabBar/Stats/MatchInfo"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 56.0
offset_right = 146.0
offset_bottom = 144.0

[node name="logoA" type="TextureRect" parent="TabBar/Stats/MatchInfo/mainLabel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
texture = ExtResource("9")
expand_mode = 1

[node name="goalA" type="Label" parent="TabBar/Stats/MatchInfo/mainLabel"]
custom_minimum_size = Vector2(30, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="-l" type="Label" parent="TabBar/Stats/MatchInfo/mainLabel"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("6")

[node name="Label" type="Label" parent="TabBar/Stats/MatchInfo/mainLabel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "  -  "

[node name="l-" type="Label" parent="TabBar/Stats/MatchInfo/mainLabel"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("6")

[node name="goalB" type="Label" parent="TabBar/Stats/MatchInfo/mainLabel"]
custom_minimum_size = Vector2(30, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="logoB" type="TextureRect" parent="TabBar/Stats/MatchInfo/mainLabel"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
texture = ExtResource("9")
expand_mode = 1

[node name="Label" type="VBoxContainer" parent="TabBar/Stats/MatchInfo"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -464.0
theme_override_constants/separation = 10

[node name="teamBall" type="Label" parent="TabBar/Stats/MatchInfo/Label" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "Ball Control"

[node name="teamShot" type="Label" parent="TabBar/Stats/MatchInfo/Label" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "ShotOn"

[node name="teamMiss" type="Label" parent="TabBar/Stats/MatchInfo/Label" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "Miss"

[node name="teamPass" type="Label" parent="TabBar/Stats/MatchInfo/Label" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "Pass"

[node name="teamBlock" type="Label" parent="TabBar/Stats/MatchInfo/Label" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "Defend"

[node name="teamKeeper" type="Label" parent="TabBar/Stats/MatchInfo/Label" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "Saves"

[node name="TeamA" type="VBoxContainer" parent="TabBar/Stats/MatchInfo"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -464.0
offset_right = -256.0
theme_override_constants/separation = 10

[node name="ball" type="Label" parent="TabBar/Stats/MatchInfo/TeamA" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="shot" type="Label" parent="TabBar/Stats/MatchInfo/TeamA" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="miss" type="Label" parent="TabBar/Stats/MatchInfo/TeamA" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="pass" type="Label" parent="TabBar/Stats/MatchInfo/TeamA" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="block" type="Label" parent="TabBar/Stats/MatchInfo/TeamA" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="save" type="Label" parent="TabBar/Stats/MatchInfo/TeamA" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="TeamB" type="VBoxContainer" parent="TabBar/Stats/MatchInfo"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = -464.0
offset_bottom = -48.0
theme_override_constants/separation = 10

[node name="ball" type="Label" parent="TabBar/Stats/MatchInfo/TeamB" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="shot" type="Label" parent="TabBar/Stats/MatchInfo/TeamB" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="miss" type="Label" parent="TabBar/Stats/MatchInfo/TeamB" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="pass" type="Label" parent="TabBar/Stats/MatchInfo/TeamB" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="block" type="Label" parent="TabBar/Stats/MatchInfo/TeamB" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="save" type="Label" parent="TabBar/Stats/MatchInfo/TeamB" groups=["labels"]]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "0"

[node name="Menu" type="HBoxContainer" parent="TabBar/Stats"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -286.0
offset_right = 195.0
offset_bottom = -211.0
alignment = 1

[node name="LabelBase" type="Label" parent="TabBar/Stats/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Time 0"

[node name="GoalA" type="ScrollContainer" parent="TabBar/Stats"]
layout_mode = 0
anchor_left = 0.0341545
anchor_top = 0.0450331
anchor_right = 0.392497
anchor_bottom = 0.153642
offset_left = 2.79514
offset_top = 90.7126
offset_right = 2.79517
offset_bottom = 90.7126

[node name="Item" type="HBoxContainer" parent="TabBar/Stats/GoalA"]
custom_minimum_size = Vector2(630, 80)
layout_mode = 2
alignment = 1

[node name="PlayerGoals" parent="TabBar/Stats/GoalA/Item" instance=ExtResource("16")]
custom_minimum_size = Vector2(83, 43)
layout_mode = 2

[node name="GoalB" type="ScrollContainer" parent="TabBar/Stats"]
layout_mode = 0
anchor_left = 0.607503
anchor_top = 0.0450331
anchor_right = 0.965845
anchor_bottom = 0.164238
offset_left = 2.79517
offset_top = 90.7126
offset_right = 2.79517
offset_bottom = 90.7126

[node name="Item" type="HBoxContainer" parent="TabBar/Stats/GoalB"]
custom_minimum_size = Vector2(630, 80)
layout_mode = 2
alignment = 1

[node name="PlayerGoals" parent="TabBar/Stats/GoalB/Item" instance=ExtResource("16")]
custom_minimum_size = Vector2(83, 43)
layout_mode = 2

[node name="ButtonClose" type="Button" parent="TabBar/Stats"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 240.5
offset_right = 48.0
offset_bottom = 336.5
tooltip_text = "Back"
theme = ExtResource("22")
theme_override_styles/normal = ExtResource("17")
theme_override_styles/hover = ExtResource("18")
theme_override_styles/pressed = ExtResource("18")
theme_override_styles/disabled = ExtResource("17")
theme_override_styles/focus = ExtResource("18")
icon = ExtResource("23")
expand_icon = true

[node name="ButtonHome" type="Button" parent="TabBar/Stats"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -132.0
offset_right = 48.0
offset_bottom = -36.0
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("17")
theme_override_styles/hover = ExtResource("18")
theme_override_styles/pressed = ExtResource("18")
theme_override_styles/disabled = ExtResource("17")
theme_override_styles/focus = ExtResource("18")
icon = ExtResource("7")
icon_alignment = 1
expand_icon = true

[node name="Formation" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 67.0
offset_right = -2.0
offset_bottom = -2.0

[node name="Info" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MatchReady" parent="TabBar/Info" instance=ExtResource("15")]
anchors_preset = 0

[node name="Setting" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("34")

[node name="MainBtn" type="Panel" parent="TabBar/Setting"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 136.0
offset_top = -275.0
offset_right = 464.0
offset_bottom = 357.0
theme_override_styles/panel = ExtResource("5")
script = ExtResource("26")
groupPath = NodePath("group")
current_tab = 2

[node name="group" type="VBoxContainer" parent="TabBar/Setting/MainBtn"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 16.0
theme_override_constants/separation = 10
script = ExtResource("33")
debug = true

[node name="BtnManager" type="Button" parent="TabBar/Setting/MainBtn/group"]
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("12")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
text = "Controller"
icon = ExtResource("27")
expand_icon = true

[node name="BtnNextMatch" type="Button" parent="TabBar/Setting/MainBtn/group"]
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
disabled = true
text = "Display"
icon = ExtResource("29")
expand_icon = true

[node name="BtnMarket" type="Button" parent="TabBar/Setting/MainBtn/group"]
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
disabled = true
text = "Theme"
icon = ExtResource("28")
expand_icon = true

[node name="BtnLeague" type="Button" parent="TabBar/Setting/MainBtn/group"]
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
disabled = true
text = "Search"
icon = ExtResource("31")
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="TabBar/Setting"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -278.0
offset_right = 277.0
offset_bottom = 342.0
theme_override_constants/separation = 20

[node name="CamHeight" type="Panel" parent="TabBar/Setting/VBoxContainer"]
custom_minimum_size = Vector2(500, 88)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("22")
theme_override_styles/panel = ExtResource("8")

[node name="label" type="Label" parent="TabBar/Setting/VBoxContainer/CamHeight"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -29.5
offset_right = 152.0
offset_bottom = 34.5
theme_override_fonts/font = ExtResource("19")
text = "Cam Height"

[node name="BtnCamHeight" type="HSlider" parent="TabBar/Setting/VBoxContainer/CamHeight"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -13.5
offset_right = -52.0
offset_bottom = 18.5
theme_override_icons/grabber = SubResource("1")
theme_override_icons/grabber_highlight = SubResource("1")
theme_override_icons/grabber_disabled = SubResource("1")
theme_override_icons/tick = SubResource("1")
theme_override_styles/slider = SubResource("2")
theme_override_styles/grabber_area = SubResource("3")
theme_override_styles/grabber_area_highlight = SubResource("3")
value = 100.0

[node name="CamPov" type="Panel" parent="TabBar/Setting/VBoxContainer"]
custom_minimum_size = Vector2(500, 88)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("22")
theme_override_styles/panel = ExtResource("8")

[node name="label" type="Label" parent="TabBar/Setting/VBoxContainer/CamPov"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -29.5
offset_right = 152.0
offset_bottom = 34.5
theme_override_fonts/font = ExtResource("19")
text = "Cam POV"

[node name="BtnCamPov" type="HSlider" parent="TabBar/Setting/VBoxContainer/CamPov"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -13.5
offset_right = -52.0
offset_bottom = 18.5
theme_override_icons/grabber = SubResource("1")
theme_override_icons/grabber_highlight = SubResource("1")
theme_override_icons/grabber_disabled = SubResource("1")
theme_override_icons/tick = SubResource("1")
theme_override_styles/slider = SubResource("2")
theme_override_styles/grabber_area = SubResource("3")
theme_override_styles/grabber_area_highlight = SubResource("3")
value = 100.0

[node name="Sensitivity" type="Panel" parent="TabBar/Setting/VBoxContainer"]
modulate = Color(1, 1, 1, 0.588235)
custom_minimum_size = Vector2(500, 88)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("22")
theme_override_styles/panel = ExtResource("8")

[node name="label" type="Label" parent="TabBar/Setting/VBoxContainer/Sensitivity"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -29.5
offset_right = 152.0
offset_bottom = 34.5
theme_override_fonts/font = ExtResource("19")
text = "Sensitivity"

[node name="BtnSensitivity" type="HSlider" parent="TabBar/Setting/VBoxContainer/Sensitivity"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -13.5
offset_right = -52.0
offset_bottom = 18.5
theme_override_icons/grabber = SubResource("1")
theme_override_icons/grabber_highlight = SubResource("1")
theme_override_icons/grabber_disabled = SubResource("1")
theme_override_icons/tick = SubResource("1")
theme_override_styles/slider = SubResource("2")
theme_override_styles/grabber_area = SubResource("3")
theme_override_styles/grabber_area_highlight = SubResource("3")
value = 100.0
editable = false
scrollable = false

[node name="BtnClearData" parent="TabBar/Setting/VBoxContainer" instance=ExtResource("1")]
visible = false
custom_minimum_size = Vector2(256, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("30")
theme_override_styles/hover = ExtResource("32")
theme_override_styles/pressed = ExtResource("32")
theme_override_styles/disabled = ExtResource("30")
theme_override_styles/focus = ExtResource("32")
text = "Reset all data"

[node name="MainBtn" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_top = 8.0
offset_right = 448.0
offset_bottom = 120.0
theme_override_styles/panel = ExtResource("5")
script = ExtResource("26")
groupPath = NodePath("MainBtn")
tabPath = NodePath("../TabBar")

[node name="MainBtn" type="HBoxContainer" parent="MainBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -19.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
script = ExtResource("24")
debug = true
_size = 500
_separation = 10

[node name="Stats" type="Button" parent="MainBtn/MainBtn"]
custom_minimum_size = Vector2(204, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("12")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
text = "Stats"
icon = ExtResource("11")
expand_icon = true

[node name="Formation" type="Button" parent="MainBtn/MainBtn"]
custom_minimum_size = Vector2(204, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
text = "Formation"
icon = ExtResource("4")
expand_icon = true

[node name="Info" type="Button" parent="MainBtn/MainBtn"]
custom_minimum_size = Vector2(204, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
text = "Info"
icon = ExtResource("10")
expand_icon = true

[node name="Setting" type="Button" parent="MainBtn/MainBtn"]
custom_minimum_size = Vector2(204, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("19")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("12")
text = "Settings"
icon = ExtResource("25")
expand_icon = true

[node name="ButtonClose" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 1
offset_left = -128.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 128.0
grow_horizontal = 0

[connection signal="drag_ended" from="TabBar/Setting/VBoxContainer/CamHeight/BtnCamHeight" to="TabBar/Setting" method="_on_BtnCamHeight_drag_ended"]
[connection signal="drag_ended" from="TabBar/Setting/VBoxContainer/CamPov/BtnCamPov" to="TabBar/Setting" method="_on_BtnCamPov_drag_ended"]
[connection signal="drag_ended" from="TabBar/Setting/VBoxContainer/Sensitivity/BtnSensitivity" to="TabBar/Setting" method="_on_BtnSensitivity_drag_ended"]
